--- a/css/style.css
+++ b/css/style.css
@@ -1,24 +1,27 @@
+/* hederis stilis gawera */
 .header {
     width: 1440px;
     margin: auto;
     background-color: #2A9D8F;
     padding: 38px 130px;
 }
-
+/* logos zomebi stili */
 .logo {
     vertical-align: middle;
     width: 46px;
     height: 46px;
-
-}
-
-.nav {
-    vertical-align: middle;
-    margin-left: 701px;
     display: inline-block;
 
 }
+/* nav */
+.nav {
+    vertical-align: middle;
+    margin-left: 600px;
+    
+    display: inline-block;
 
+}
+/* ul */
 .ul {
 
     list-style-type: none;
@@ -26,18 +29,18 @@
     font-size: 32px;
     color: white;
 }
-
+/* li */
 li {
 
     display: inline-block;
 }
-
+/* shua lis gaketeba */
 .li_central {
     margin-left: 80px;
     margin-right: 80px;
 
 }
-
+/* section */
 .section {
     background-color: #C2F3EE;
 
@@ -45,13 +48,13 @@ li {
     margin: auto;
     padding: 80px 130px;
 }
-
+/* foto seqciashi */
 .image_section {
     width: 600px;
     height: 560px;
     display: inline-block;
 }
-
+/* artiklebi */
 .article {
     width: 460px;
     margin: auto;
@@ -60,7 +63,7 @@ li {
     vertical-align: top;
 
 }
-
+/* h2 */
 .h2 {
     font-family: "Poppins", sans-serif;
     font-weight: 700;
@@ -70,7 +73,7 @@ li {
 
 
 }
-
+/* pi1 */
 .p1 {
     font-family: "Poppins", sans-serif;
     font-weight: 400;
@@ -80,7 +83,7 @@ li {
     margin-bottom: 45px;
     line-height: 27px;
 }
-
+/* gilaki */
 .button {
     background-color: #2A9D8F;
     border-style: none;
@@ -90,7 +93,7 @@ li {
     width: 113px;
     height: 46px;
 }
-
+/* artikli2 */
 .article2 {
     width: 780px;
     margin: 120px auto;
@@ -165,3 +168,5 @@ li {
 .a {
     color: white;
 }
+
+/* bodishit aseti komentaristvis dilis 6:30 wutia :( */
