--- a/css/style.css
+++ b/css/style.css
@@ -5,41 +5,54 @@
     background-color: #2A9D8F;
     padding: 38px 130px;
 }
+
 /* logos zomebi stili */
-.logo {
+.logo_link {
     vertical-align: middle;
     width: 46px;
     height: 46px;
     display: inline-block;
-
 }
+
+
+.logo {
+    width: 100%;
+    height: 100%;
+}
+
+
 /* nav */
 .nav {
     vertical-align: middle;
-    margin-left: 600px; 
+    margin-left: 697px;
     /* aq marjinis dros roca 701 vutiteb qvemot magdebs */
     display: inline-block;
 
 }
-/* ul */
-.ul {
 
-    list-style-type: none;
-    font-family: "Nerko One", cursive;
-    font-size: 32px;
-    color: white;
-}
-/* li */
-li {
 
-    display: inline-block;
-}
+
+
 /* shua lis gaketeba */
 .li_central {
-    margin-left: 80px;
-    margin-right: 80px;
+    margin-inline: 76px;
+
 
 }
+.header_nav_li {
+    display: inline-block;
+}
+
+
+.header_nav_link {
+    color: #FFFFFF;
+    font-family: "Nerko One", cursive;
+    font-size: 32px;
+    font-weight: 400;
+    line-height: 32px;
+    letter-spacing: 0.005em;
+}
+
 /* section */
 .section {
     background-color: #C2F3EE;
@@ -48,12 +61,14 @@ li {
     margin: auto;
     padding: 80px 130px;
 }
+
 /* foto seqciashi */
 .image_section {
     width: 600px;
     height: 560px;
     display: inline-block;
 }
+
 /* artiklebi */
 .article {
     width: 460px;
@@ -63,6 +78,7 @@ li {
     vertical-align: top;
 
 }
+
 /* h2 */
 .h2 {
     font-family: "Poppins", sans-serif;
@@ -73,6 +89,7 @@ li {
 
 
 }
+
 /* pi1 */
 .p1 {
     font-family: "Poppins", sans-serif;
@@ -83,6 +100,7 @@ li {
     margin-bottom: 45px;
     line-height: 27px;
 }
+
 /* gilaki */
 .button {
     background-color: #2A9D8F;
@@ -93,6 +111,7 @@ li {
     width: 113px;
     height: 46px;
 }
+
 /* artikli2 */
 .article2 {
     width: 780px;
@@ -100,8 +119,7 @@ li {
 }
 
 .h2_2 {
-    margin: auto;
-    width: 352px;
+   text-align: center;
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     color: #06686E;
@@ -110,7 +128,6 @@ li {
 
 .p2 {
     margin-top: 80px;
-    width: 780px;
     font-family: "Nerko One", cursive;
     font-weight: 400;
     color: #337C81;
@@ -126,14 +143,17 @@ li {
     padding: 88px 130px;
 
 }
-
-.logo2 {
+.logo_link2 {
     vertical-align: middle;
     width: 98px;
     height: 98px;
     display: inline-block;
-    
+}
 
+
+.logo2 {
+    width: 100%;
+    height: 100%;
 }
 
 .section2 {
@@ -143,16 +163,10 @@ li {
 
 }
 
-.nav2 {
-    width: 148px;
-    display: inline-block;
-
-
-}
 
 .h2_3 {
 
-    width: 111px;
+   
     font-family: "Poppins", sans-serif;
     font-weight: 700;
     color: white;
@@ -162,12 +176,15 @@ li {
 }
 
 .limidle {
-    margin-top: 8px;
-    margin-bottom: 8px;
+    margin-block: 8px;
 }
 
 .a {
-    color: white;
+    font-family: "Poppins", sans-serif;
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 27px;
+    color: #FFFFFF;
 }
 
 /* bodishit aseti komentaristvis dilis 6:30 wutia :( */
